[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/main.gd" type="Script" id=2]
[ext_resource path="res://scenes/mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://Images/starfield.png" type="Texture" id=4]
[ext_resource path="res://audio/William Rosati - Floating Also.mp3" type="AudioStream" id=5]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1920, 8, 0, 0, 0, 0, 1920, 1072, 0, 0, 0, 0, 0, 1064, 0, 0, 0, 0, 0, 8 )
}

[node name="main" type="Node"]
script = ExtResource( 2 )
mob_scene = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
light_mask = 2
margin_left = -56.0
margin_top = -40.0
margin_right = 1992.0
margin_bottom = 1136.0
texture = ExtResource( 4 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player" parent="." instance=ExtResource( 1 )]

[node name="mobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="startTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="scoreTimer" type="Timer" parent="."]

[node name="startPosition" type="Position2D" parent="."]
position = Vector2( 968, 736 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
rotation = 0.00416664

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="HUD" parent="." instance=ExtResource( 6 )]

[connection signal="hit" from="player" to="." method="game_over"]
[connection signal="timeout" from="mobTimer" to="." method="_on_mobTimer_timeout"]
[connection signal="timeout" from="startTimer" to="." method="_on_startTimer_timeout"]
[connection signal="timeout" from="scoreTimer" to="." method="_on_scoreTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
